--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ nav#swipenav{
 				}
 
 
-				#mobile-home h1{padding-top: 52px;
+				#mobile-home h1{padding-top: 80px;
 								font-size: 20px;
 								color: #ffffff;
 								position: fixed;
@@ -131,13 +131,13 @@ nav#swipenav{
 								/* width: 30px; */
 					}
 
-		@media only screen and (min-width: 801px){
+/*		@media only screen and (min-width: 801px){
 		#mobile-home{ display: none;
 					visibility:hidden;
 						}
 				}
 
-
+*/
 		/*END MOBILE-HOME*/
 
 	/*CONTACT PAGE*/	
